# ECS

./: .gitignore  CMakeLists.txt  README.md
Components/: Components.h
Demo/: CMakeLists.txt  main.cpp
ECS/: CMakeLists.txt
ECS/include/: Archetype.h  ArchetypeRegistry.h  ComponentColumn.h  ComponentID.h  Entity.h  EntityRegistry.h  World.h
ECS/src/: Archetype.cpp  ComponentID.cpp  World.cpp
Sandbox/: CMakeLists.txt  Components.h  main.cpp
